# lihil_mcp

./: .coverage  Makefile  README.md  pyproject.toml  structure.md
examples/csv_agent/: README.md  csv_agent.py  requirements.txt  run_agent.py  sample_data.csv
examples/csv_agent/sample_data/: employees.csv  messy_data.csv  sales_data.csv
lihil_mcp/: README.md  __init__.py  config.py  decorators.py  server.py  transport.py  types.py
tests/: test_config.py  test_csv_agent_example.py  test_decorators.py  test_init.py  test_integration.py  test_server_comprehensive.py  test_transport_comprehensive.py  test_types.py
