[project]
name = "lihil-mcp"
version = "0.1.0"
description = "MCP (Model Context Protocol) plugin for Lihil framework"
readme = "README.md"
authors = [
    { name = "raceychan", email = "raceychan@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.8.1",
    "lihil>=0.2.0",
    "pandas>=2.3.0",
    "numpy>=2.2.6",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
